<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linPreviousWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            android:padding="8dp"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_back_24"
                android:contentDescription="@string/blank" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linNextWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:padding="8dp"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_forward_24"
                android:contentDescription="@string/blank" />
        </LinearLayout>
        <TextView
            android:id="@+id/tvDateDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/linPreviousWeek"
            app:layout_constraintRight_toLeftOf="@id/linNextWeek"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:text=""/>
    </android.support.constraint.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvSundayTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@android:color/holo_red_light"
                android:text="@string/date_title_sunday"/>

            <TextView
                android:id="@+id/tvSundayDate"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="3dp"
                android:gravity="center"
                android:textSize="14sp"
                android:textColor="@android:color/holo_red_light"
                android:text="0"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvMondayDateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@android:color/black"
                android:text="@string/date_title_monday"/>

            <TextView
                android:id="@+id/tvMondayDate"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:padding="3dp"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:text="0"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvTuesdayDateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@android:color/black"
                android:text="@string/date_title_tuesday"/>

            <TextView
                android:id="@+id/tvTuesdayDate"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:padding="3dp"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:text="0"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvWednesdayDateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@android:color/black"
                android:text="@string/date_title_wednesday"/>

            <TextView
                android:id="@+id/tvWednesdayDate"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:padding="3dp"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:text="0"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvThursdayDateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@android:color/black"
                android:text="@string/date_title_thursday"/>

            <TextView
                android:id="@+id/tvThursdayDate"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:padding="3dp"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:text="0"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvFridayDateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@android:color/black"
                android:text="@string/date_title_friday"/>

            <TextView
                android:id="@+id/tvFridayDate"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:padding="3dp"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:text="0"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvSaturdayDateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@android:color/holo_red_light"
                android:text="@string/date_title_saturday"/>

            <TextView
                android:id="@+id/tvSaturdayDate"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:padding="3dp"
                android:textSize="14sp"
                android:textColor="@android:color/holo_red_light"
                android:text="0"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>